--- a/CPU7Plus.csproj
+++ b/CPU7Plus.csproj
@@ -29,6 +29,10 @@
     </ItemGroup>
     <ItemGroup>
       <None Remove="Resources\Bootstrap.rom" />
+    </ItemGroup>
+    <ItemGroup>
+      <None Remove="Resources\Ken_Bootstrap_1_unscrabled.rom" />
+      <None Remove="Resources\bootstrap_unscrambled.rom" />
       <EmbeddedResource Include="Resources\boot.rom" />
     </ItemGroup>
 </Project>
